Fixing compatibility with Ansible 2.3
Change-Id: Iac86e99ffc79558a19f2078846007bf23c6ddc2a

--- a/tasks/main.yaml
+++ b/tasks/main.yaml
@@ -44,7 +44,7 @@
 - name: Start Bind service
   service:
     name: "{{ bind_service }}"
-    state: running
+    state: started
   register: bind_service_started
   tags:
     - bind_service
